[package]
name = "neural_sdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
glam = "0.25.0"
kdam = { version = "0.5.1", features = ["rayon"] }
log = "0.4.21"
num = "0.4.1"
png = "0.17.13"
rand = "0.8.5"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
static_assertions = "1.1.0"
tokio = { version = "1.36.0", features = ["full"] }
wavefront_obj = "10.0.0"
