[package]
name = "neural_sdf"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.3", features = ["derive"] }
glam = { version = "0.27.0", features = ["bytemuck"] }
kdam = { version = "0.5.1", features = ["rayon"] }
rand = "0.8.5"
rayon = "1.9.0"
serde = { version = "1.0.197", features = ["derive", "rc"] }
static_assertions = "1.1.0"
tokio = { version = "1.36.0", features = ["full"] }
thiserror = "1.0.60"
pom = "3.4.0"
